# windows-port

./: .gitmodules  CMakeLists.txt  __.cmake
include/: FreeImage  FreeImage.h  archive.h  archive_entry.h  bzlib.h  cairo  freetype  ft2build.h  glm  int_equality_debug.h  jerror.h  jinclude.h  jpeglib.h  jxr  libraw  mysql  openexr  openjpeg  pixman  png  png.h  pugixml.hpp  sqlite3.h  tiny_obj_loader.h  transupp.h  zutil.h
package_list/avcodec/: _references.txt
package_list/avutil/: _references.txt
package_list/swresample/: _references.txt
